# kor-macro-data

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONNECTOR_FIXES_SUMMARY.md  CONTRIBUTING.md  DATA_CATALOG.md  DATA_COLLECTION_REPORT.md  DATA_QUALITY_ANALYSIS.md  GLOBAL_DATA_SOURCES.md  LICENSE  MERGE_ISSUE_ANALYSIS.md  PUBLISHING_GUIDE.md  QUICKSTART_GUIDE.md  README.md  README_PACKAGE.md  REORGANIZATION_SUMMARY.md  REPRESENTATIVE_DATA_CATALOG.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  bok_statistics_raw.xml  dataset_discovery.py  download_all_available_data.py  example_with_integrity_check.py  explore_kbland.py  export_datasets.py  main.py  merge_data_complete.py  merge_data_properly.py  merge_example.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  test_apis.py  test_date_shift_detection.py  test_global_data.py  test_kb_download.py  test_kbland.py
connectors/: __init__.py  base.py  kbland_enhanced.py  seoul.py
dataset_lists/: KB_LAND_COMPLETE_CATALOG.md
docs/: DATA_MERGER_USAGE.md  GITHUB_UPLOAD_CHECKLIST.md  KB_LAND_DATA_CATALOG.md
docs/dataset_lists/: catalog_summary.json  kb_land_detailed_catalog.json  kb_land_exploration.json
examples/: eia_example.py  example.ipynb  example_with_integrity_check.py  kb_land_simple.py  kb_land_working_example.py  merge_example.py
kor_macro/: __init__.py  data_integrity_checker.py  data_merger.py
kor_macro/connectors/: __init__.py  base.py  bok.py  eia.py  global_data.py  kbland.py  kosis.py
scripts/data_collection/: collect_bok_data_correct.py  collect_research_data.py  collect_research_data_fixed.py
scripts/exploration/: list_kb_land_data.py
scripts/research_data/: data_collection_report.txt
tests/: test_apis.py  test_date_shift_detection.py  test_global_data.py  test_kb_download.py  test_kbland.py
